Another fix for letter size on mobile

--- a/style.css
+++ b/style.css
@@ -160,12 +160,12 @@ button {
 		height: 20px;
 	}
 	label {
-		font-size: 20px;
+		font-size: 28px;
 	}
 	.text {
 		/*padding-right: 10vw !important;
 		padding-left: 10vw !important;*/
-		font-size: 20px;
+		font-size: 28px;
 	}
 }
 
